tests/fail/gram_decl_order.frac
gram koch = {
    init: 'F p p F p p F',
    alphabet: [F, p, m],
    rules: {
        'F' -> 'F m F p p F m F',
        'F' -> move(1),
        'm' -> rturn(60),
        'p' -> lturn(60)
    }
}

main() {
    draw(koch, 6);
}
